--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,16 @@ DerivedData/
 timeline.xctimeline
 playground.xcworkspace
 
+# Swift 
+.DS_Store
+/.build
+/Packages
+xcuserdata/
+DerivedData/
+.swiftpm/configuration/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
 # Swift Package Manager
-#
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
 # Packages/
 # Package.pins
